--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
         <ul class="hits">
           <li class="tastes-item">
             <a class="hit-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_1.png" alt="Мороженое 1" />
-                <p class="price">
-                  310
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
-                >
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+              <p class="price">
+                310
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+              >
               <button class="hidden-button" type="button">
                 Быстрый просмотр
               </button>
@@ -260,17 +260,17 @@
 
           <li class="tastes-item">
             <a class="hit-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_2.png" alt="Мороженое 2" />
-                <p class="price">
-                  380
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+              <p class="price">
+                380
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
 
-                <a class="ice-cream-name" href=""
-                  >Сливочно-кофейное с кусочками шоколада</a
-                >
+              <a class="ice-cream-name" href=""
+                >Сливочно-кофейное с кусочками шоколада</a
+              >
               <button class="hidden-button" type="button">
                 Быстрый просмотр
               </button>
@@ -279,16 +279,16 @@
 
           <li class="tastes-item">
             <a class="hit-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_3.png" alt="Мороженое 3" />
-                <p class="price">
-                  355
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочно-клубничное с присыпкой из белого шоколада</a
-                >
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+              <p class="price">
+                355
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочно-клубничное с присыпкой из белого шоколада</a
+              >
               <button class="hidden-button" type="button">
                 Быстрый просмотр
               </button>
@@ -297,16 +297,16 @@
 
           <li class="tastes-item">
             <a class="hit-container" href="">
-                <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
-                <img src="IMG/Taste_4.png" alt="Мороженое 4" />
-                <p class="price">
-                  415
-                  <span class="rub">₽</span>
-                  <span class="unit-monetary">/кг</span>
-                </p>
-                <a class="ice-cream-name" href=""
-                  >Сливочное крем-брюле с карамельной подливкой</a
-                >
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+              <p class="price">
+                415
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное крем-брюле с карамельной подливкой</a
+              >
               <button class="hidden-button" type="button">
                 Быстрый просмотр
               </button>
@@ -559,6 +559,7 @@
       </div>
     </footer>
 
+    <div class="darkness"></div>
     <section class="modal modal-feedback">
       <h6 class="visually-hidden">Feedback form</h6>
       <svg
@@ -574,29 +575,21 @@
         />
       </svg>
       <form class="feedback-form">
-        <div class="darkness">
-          <div class="inputs-container">
-            <p class="feedback-text">Мы обязательно вам ответим!</p>
-            <input
-              class="feedback-name"
-              type="text"
-              placeholder="Имя Фамилия"
-            />
-            <input
-              class="feedback-email"
-              type="email"
-              placeholder="email@example.com"
-            />
-            <textarea
-              class="feedback-textarea"
-              placeholder="В свободной форме"
-            ></textarea>
-          </div>
-          <div class="send-button-container">
-            <button class="feedback-send-button" type="submit">
-              Отправить
-            </button>
-          </div>
+        <div class="inputs-container">
+          <p class="feedback-text">Мы обязательно вам ответим!</p>
+          <input class="feedback-name" type="text" placeholder="Имя Фамилия" />
+          <input
+            class="feedback-email"
+            type="email"
+            placeholder="email@example.com"
+          />
+          <textarea
+            class="feedback-textarea"
+            placeholder="В свободной форме"
+          ></textarea>
+        </div>
+        <div class="send-button-container">
+          <button class="feedback-send-button" type="submit">Отправить</button>
         </div>
       </form>
     </section>
