--- a/index.html
+++ b/index.html
@@ -594,6 +594,6 @@
       </form>
     </section>
 
-    <script src="JS/index.js"></script>
+    <script type="module" src="JS/index.js"></script>
   </body>
 </html>
