--- a/catalog.html
+++ b/catalog.html
@@ -9,179 +9,13 @@
   </head>
 
   <body class="background-offer-1">
-    <!-- Заменить кнопку "Корзина" в шаблоне header" -->
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
-          <img
-            src="IMG/logo.svg"
-            width="154"
-            height="64"
-            alt="Логотип магазина"
-          />
-        </a>
-        <div class="menu-container">
-          <ul class="site-navigation">
-            <li class="catalog-button-container">
-              <button
-                class="catalog__button site-navigation-button"
-                type="button"
-              >
-                Каталог
-              </button>
-
-              <section class="modal modal-catalog-menu">
-                <h6 class="visually-hidden">Catalog menu</h6>
-                <form class="catalog-menu-form">
-                  <p>Новинки</p>
-                  <ul class="new-products">
-                    <li><!-- разделитель--></li>
-                    <li>
-                      <a class="creamy-ice-cream__button" href="catalog.html"
-                        >Сливочное</a
-                      >
-                    </li>
-                    <li>Щербеты</li>
-                    <li>Фруктовый лед</li>
-                    <li>Мелорин</li>
-                  </ul>
-                </form>
-              </section>
-            </li>
-
-            <li>
-              <a class="site-navigation-button" href="">Доставка и оплата</a>
-            </li>
-
-            <li><a class="site-navigation-button" href="">О Компании</a></li>
-          </ul>
-
-          <ul class="user-navigation">
-            <li class="search-button-container">
-              <button
-                class="search__button user-navigation-button"
-                type="button"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  width="17"
-                  height="17"
-                  viewBox="0 0 17 17"
-                >
-                  <path
-                    fill="#fff"
-                    d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
-                  />
-                </svg>
-              </button>
-
-              <section class="modal modal-search">
-                <h6 class="visually-hidden">Search</h6>
-                <form class="search-form">
-                  <label
-                    ><input
-                      class="input-search"
-                      type="search"
-                      placeholder="Крем-брюле"
-                  /></label>
-                </form>
-              </section>
-            </li>
-
-            <li class="login-button-container">
-              <button
-                class="login__button user-navigation-button"
-                type="button"
-              >
-                <svg
-                  width="21"
-                  height="19"
-                  viewBox="0 0 21 19"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M7.00001 14.875L13.917 9.5L7.00001 4.125V7.042H0.958008V11.959H7.00001V14.875Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M19 0H6C4.9 0 4 0.9 4 2V4H6V2H19V17H6V15H4V17C4 18.1 4.9 19 6 19H19C20.1 19 21 18.1 21 17V2C21 0.9 20.1 0 19 0Z"
-                    fill="white"
-                  />
-                </svg>
-                Вход
-              </button>
-
-              <section class="modal modal-login">
-                <h6 class="visually-hidden">Login window</h6>
-                <form class="login-form">
-                  <label class="login"
-                    ><input
-                      class="login-input"
-                      type="email"
-                      placeholder="email@example.com"
-                  /></label>
-
-                  <label class="password"
-                    ><input
-                      class="password-input"
-                      type="password"
-                      placeholder="••••••••"
-                  /></label>
-
-                  <div class="sign-in-container">
-                    <button class="button-sign-in" type="submit">Войти</button>
-
-                    <ul class="registration-container">
-                      <li><a class="restore" href="#">Забыли пароль?</a></li>
-                      <li>
-                        <a class="registration" href="#">Новая регистрация</a>
-                      </li>
-                    </ul>
-                  </div>
-                </form>
-              </section>
-            </li>
-
-            <li>
-              <button
-                class="basket-button user-navigation-button filled-basket"
-                type="button"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="21"
-                  height="20"
-                  viewBox="0 0 21 20"
-                >
-                  <path
-                    fill="#E84D37"
-                    d="M5.888 4.031L6.922 13h10.45l1.176-8.969z"
-                  />
-                  <circle fill="#343434" cx="6.984" cy="18" r="2" />
-                  <circle fill="#343434" cx="15.984" cy="18" r="2" />
-                  <path
-                    fill="#343434"
-                    d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"
-                  />
-                </svg>
-                2 товара
-              </button>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <h1 class="visually-hidden">Catalog</h1>
-      <ul class="working-time">
-        <li>С 10 до 20, ежедневно</li>
-        <li>8 812 450-25-25</li>
-      </ul>
     </header>
 
     <main>
-      <h2 class="visually-hidden">Крошки</h2>
+      <h1 class="visually-hidden">Catalog</h1>
+
+      <h2 class="visually-hidden">Bread crumbs</h2>
       <ul class="path">
         <li>Главная</li>
         <li>>></li>
@@ -389,7 +223,7 @@
     <footer class="main-footer">
     </footer>
 
-    <script type="module" src="JS/catalog.js"></script>
     <script src="JS/renderingElements.js"></script>
+    <script type="module" src="JS/catalog.js"></script>
   </body>
 </html>
