--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -24,7 +24,7 @@
 
       <h2 class="creamy-header">Сливочное мороженое</h2>
 
-      <section class="sorting">
+      <section class="sorting-container">
         <div>
           <h3 class="header-sorting">Сортировка:</h3>
 
@@ -37,68 +37,328 @@
         </div>
 
         <div>
-          <h3>Цена:</h3>
-          <p>100 руб.-500 руб.</p>
+          <h3 class="header-sorting">Цена:</h3>
+          <p class="price-range">100 руб. – 500 руб.</p>
           <form class="price-filter">
             <input type="range" max="1000" value="50" />
           </form>
         </div>
 
         <div>
-          <h3>Жирность:</h3>
-          <form class="fat content">
+          <h3 class="header-sorting">Жирность:</h3>
+          <form class="fat-content">
             <label>
-              <input type="radio" name="fat content" />
+              <input
+                type="radio"
+                name="fat-content"
+                id="fat-content-0"
+                checked
+              />
+              <img
+                src="IMG/radio-off.svg"
+                width="22"
+                height="22"
+                alt="fat content 0%"
+              />
               0%
-              <!-- <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-1" /> -->
             </label>
             <label>
-              <input type="radio" name="fat content" />
+              <input type="radio" name="fat-content" id="fat-content-10" />
+              <img
+                src="IMG/radio-off.svg"
+                width="22"
+                height="22"
+                alt="fat content up to 10%"
+              />
               до 10%
             </label>
             <label>
-              <input type="radio" name="fat content" />
+              <input type="radio" name="fat-content" id="fat-content-30" />
+              <img
+                src="IMG/radio-off.svg"
+                width="22"
+                height="22"
+                alt="fat content up to 30%"
+              />
               до 30%
             </label>
             <label>
-              <input type="radio" name="fat content" />
+              <input type="radio" name="fat-content" id="fat-content-more-30" />
+              <img
+                src="IMG/radio-off.svg"
+                width="22"
+                height="22"
+                alt="fat content more than 30%"
+              />
               выше 30%
             </label>
           </form>
         </div>
       </section>
 
-      <h3>Наполнители:</h3>
-      <form class="fillers">
-        <label>
-          <input type="checkbox" name="fillers" />
-          шоколадные
-          <!-- <img src="IMG/radio-button-off.svg" alt="ice-cream-offer-1" /> -->
-        </label>
+      <section class="fillers-container">
+        <h3 class="header-sorting">Наполнители:</h3>
+        <form class="fillers">
+          <label>
+            <input type="checkbox" name="fillers" id="chocolate" />
+            <img
+              src="IMG/checkbox-off.svg"
+              width="20"
+              height="20"
+              alt="chocolate"
+            />
+            шоколадные
+          </label>
 
-        <label>
-          <input type="checkbox" name="fillers" />
-          сахарные присыпки
-        </label>
+          <label>
+            <input type="checkbox" name="fillers" id="sugar-powders" />
+            <img
+              src="IMG/checkbox-off.svg"
+              width="20"
+              height="20"
+              alt="sugar powders"
+            />
+            сахарные присыпки
+          </label>
 
-        <label>
-          <input type="checkbox" name="fillers" />
-          фрукты
-        </label>
-        <label>
-          <input type="checkbox" name="fillers" />
-          сиропы
-        </label>
-        <label>
-          <input type="checkbox" name="fillers" />
-          джемы
-        </label>
-      </form>
-      <button type="button">Применить</button>
+          <label>
+            <input type="checkbox" name="fillers" id="fruits" />
+            <img
+              src="IMG/checkbox-off.svg"
+              width="20"
+              height="20"
+              alt="fruits"
+            />
+            фрукты
+          </label>
+          <label>
+            <input type="checkbox" name="fillers" id="syrups" />
+            <img
+              src="IMG/checkbox-off.svg"
+              width="20"
+              height="20"
+              alt="syrups"
+            />
+            сиропы
+          </label>
+          <label>
+            <input type="checkbox" name="fillers" id="jams" />
+            <img src="IMG/checkbox-off.svg" width="20" height="20" alt="jams" />
+            джемы
+          </label>
+        </form>
+
+        <button class="apply-filter-button" type="button">Применить</button>
+      </section>
+
+      <section class="tastes-container">
+        <ul class="tastes-creamy">
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+              <p class="price">
+                310
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+              >
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+              <p class="price">
+                380
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочно-кофейное с кусочками шоколада
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+              <p class="price">
+                355
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочно-клубничное с присыпкой из белого шоколада
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+              <p class="price">
+                415
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочное крем-брюле с карамельной подливкой
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_5.png" alt="Мороженое 5" />
+              <p class="price">
+                325
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочное с брусничным джемом
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_6.png" alt="Мороженое 6" />
+              <p class="price">
+                410
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочно-черничное с цельными ягодами черники
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_7.png" alt="Мороженое 7" />
+              <p class="price">
+                375
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочно-лимонное с карамельной присыпкой
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_8.png" alt="Мороженое 8" />
+              <p class="price">
+                320
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочное с шоколадной стружкой
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_9.png" alt="Мороженое 9" />
+              <p class="price">
+                440
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочно-ванильное с кусочками шоколада
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_10.png" alt="Мороженое 10" />
+              <p class="price">
+                435
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочноe с ментоловым сиропом
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_11.png" alt="Мороженое 11" />
+              <p class="price">
+                355
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href="">
+                Сливочное с кусочками черного шоколада
+              </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+
+          <li class="tastes-item">
+            <a class="hit-container" href="">
+              <img src="IMG/Taste_12.png" alt="Мороженое 12" />
+              <p class="price">
+                420
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
+              <a class="ice-cream-name" href=""> Сливочное с мятным сиропом </a>
+              <button class="hidden-button" type="button">
+                Быстрый просмотр
+              </button>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
-   
-
+    <!--  прыгает футер при наведении на карточки-->
     <footer class="main-footer"></footer>
 
     <script src="JS/renderingElements.js"></script>
