--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </head>
 
   <body class="background-offer-1 picture-offer-1">
-    <header class="main-header">
-
-      </header>
+    <header class="main-header"></header>
 
     <main>
       <h2 class="visually-hidden">Предложения</h2>
@@ -285,11 +283,9 @@
       </article>
     </main>
 
-    <footer class="main-footer">
-      
-    </footer>
+    <footer class="main-footer"></footer>
 
-    <div class="darkness"></div>
+    <div class="dark-backdrop"></div>
     <section class="modal modal-feedback">
       <h6 class="visually-hidden">Feedback form</h6>
       <svg
@@ -326,6 +322,5 @@
 
     <script src="JS/renderingElements.js"></script>
     <script type="module" src="JS/index.js"></script>
-
   </body>
 </html>
