--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -45,39 +45,37 @@
           <!-- <form class="price-filter">
             <input type="range" min="50" max="2000" value="50" />
           </form> -->
-
-          <div slider id="slider-distance">
-        <div>
-          <div inverse-left style="width:70%;"></div>
-          <div inverse-right style="width:70%;"></div>
-          <div range style="left:0%;right:0%;"></div>
-          <span thumb style="left:0%;"></span>
-          <span thumb style="left:100%;"></span>
-          <div sign style="left:0%;">
-            <!-- <span id="value">0</span> -->
-          </div>
-          <div sign style="left:100%;">
-            <!-- <span id="value">100</span> -->
-          </div>
-        </div>
-        <input type="range" value="0" max="100" min="0" step="1" oninput="
-        this.value=Math.min(this.value,this.parentNode.childNodes[5].value-1);
-        let value = (this.value/parseInt(this.max))*100
-        var children = this.parentNode.childNodes[1].childNodes;
-        children[1].style.width=value+'%';
-        children[5].style.left=value+'%';
-        children[7].style.left=value+'%';children[11].style.left=value+'%';
-        children[11].childNodes[1].innerHTML=this.value;" />
-      
-        <input type="range" value="100" max="100" min="0" step="1" oninput="
-        this.value=Math.max(this.value,this.parentNode.childNodes[3].value-(-1));
-        let value = (this.value/parseInt(this.max))*100
-        var children = this.parentNode.childNodes[1].childNodes;
-        children[3].style.width=(100-value)+'%';
-        children[5].style.right=(100-value)+'%';
-        children[9].style.left=value+'%';children[13].style.left=value+'%';
-        children[13].childNodes[1].innerHTML=this.value;" />
-      </div>
+          <form class="price-filter">
+            <div class="range">
+              <div class="range-slider">
+                <span class="range-selected"></span>
+              </div>
+              <div class="range-input">
+                <input
+                  type="range"
+                  class="min"
+                  min="0"
+                  max="1000"
+                  value="300"
+                  step="10"
+                />
+                <input
+                  type="range"
+                  class="max"
+                  min="0"
+                  max="1000"
+                  value="700"
+                  step="10"
+                />
+              </div>
+              <div class="range-price">
+                <label for="min">Min</label>
+                <input type="number" name="min" value="300" />
+                <label for="max">Max</label>
+                <input type="number" name="max" value="700" />
+              </div>
+            </div>
+          </form>
         </section>
 
         <div class="fat-content-container">
@@ -451,5 +449,6 @@
 
     <script src="JS/renderingElements.js"></script>
     <script type="module" src="JS/catalog.js"></script>
+    <script src="JS/price-range.js"></script>
   </body>
 </html>
