Updated price filter

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -44,8 +44,7 @@
 
           <div class="range-price">
             <h3 class="header-sorting price-header">Цена:</h3>
-            <!-- <input class="input-range-min" name="min" value="100" readonly/> -->
-            <input type="text" class="input-range-min" name="min" value="300" readonly />
+            <input class="input-range-min" name="min" value="100" readonly/>
             <h3 class="header-sorting price-header">руб. -</h3>
             <input class="input-range-max" name="max" value="700" readonly/>
             <h3 class="header-sorting price-header">руб.</h3>
