Fixed price filter functionality

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -44,10 +44,14 @@
 
           <div class="range-price">
             <h3 class="header-sorting price-header">Цена:</h3>
-            <input class="input-range-min" name="min" value="100" readonly/>
+            <span class="price-value-style min-price">300</span>
+            <span class="header-sorting price-header">руб. -</span>
+            <span class="price-value-style max-price">700</span>
+            <span class="header-sorting price-header">руб.</span>
+            <!-- <input class="input-range-min" name="min" value="100" readonly/>
             <h3 class="header-sorting price-header">руб. -</h3>
             <input class="input-range-max" name="max" value="700" readonly/>
-            <h3 class="header-sorting price-header">руб.</h3>
+            <h3 class="header-sorting price-header">руб.</h3> -->
           </div>
 
           <div class="price-filter">
