Made price filter

--- a/catalog_creamy.html
+++ b/catalog_creamy.html
@@ -38,11 +38,11 @@
 
         <section class="price-filter-container">
           <div class="range-price">
-            <h3 class="header-sorting" id="price-text">Цена:</h3>   <!--class="header-sorting price-header"-->
+            <h3 class="header-sorting price-header">Цена:</h3>   <!--class="header-sorting price-header"-->
             <span class="price-value-style min-price">100</span>
-            <span class="header-sorting price-header" id="rub-text">руб. - </span>
+            <span class="header-sorting price-header rub-text">руб. - </span>
             <span class="price-value-style max-price">500</span>
-            <span class="header-sorting price-header">руб.</span>
+            <span class="header-sorting price-header rub-text">руб.</span>
           </div>
 
           <div class="price-filter">
@@ -74,7 +74,7 @@
         </section>
 
         <div class="fat-content-container">
-          <h3 class="header-sorting">Жирность:</h3>
+          <h3 class="header-sorting fat-content-header">Жирность:</h3>
           <form class="fat-content">
             <label class="percent-checkbox">
               <input
